--- a/launcher/package.json
+++ b/launcher/package.json
@@ -5,7 +5,7 @@
   },
   "name": "launcher",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "main.js",
   "dependencies": {
     "boolean": "^3.2.0",
     "buffer-crc32": "^0.2.13",
@@ -18,6 +18,7 @@
     "define-data-property": "^1.1.4",
     "define-properties": "^1.2.1",
     "detect-node": "^2.1.0",
+    "electron-updater": "^6.6.2",
     "end-of-stream": "^1.4.5",
     "env-paths": "^2.2.1",
     "es-define-property": "^1.0.1",
@@ -67,10 +68,22 @@
     "yauzl": "^2.10.0"
   },
   "scripts": {
-    "start": "electron main.js"
+    "start": "electron main.js",
+    "build": "electron-builder"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "build": {
+    "win": {
+      "icon": "icon.png"
+    },
+    "mac": {
+      "icon": "icon.png"
+    },
+    "linux": {
+      "icon": "icon.png"
+    }
+  }
 }
