--- a/launcher/package.json
+++ b/launcher/package.json
@@ -5,6 +5,10 @@
   },
   "name": "launcher",
   "version": "1.0.0",
+  "repository": {
+  "type": "git",
+  "url": "https://github.com/Szilaardd/SLauncher-app.git"
+},
   "main": "main.js",
   "dependencies": {
     "boolean": "^3.2.0",
