--- a/launcher/package.json
+++ b/launcher/package.json
@@ -6,9 +6,9 @@
   "name": "launcher",
   "version": "1.0.0",
   "repository": {
-  "type": "git",
-  "url": "https://github.com/Szilaardd/SLauncher-app.git"
-},
+    "type": "git",
+    "url": "https://github.com/Szilaardd/SLauncher-app.git"
+  },
   "main": "main.js",
   "dependencies": {
     "boolean": "^3.2.0",
@@ -80,6 +80,13 @@
   "license": "ISC",
   "description": "",
   "build": {
+    "publish": [
+      {
+        "provider": "github",
+        "owner": "Szilaardd",
+        "repo": "SLauncher-app"
+      }
+    ],
     "win": {
       "icon": "icon.png"
     },
