--- a/launcher/package.json
+++ b/launcher/package.json
@@ -11,6 +11,7 @@
   },
   "main": "main.js",
   "dependencies": {
+    "7zip-bin": "^5.2.0",
     "boolean": "^3.2.0",
     "buffer-crc32": "^0.2.13",
     "cacheable-lookup": "^5.0.4",
@@ -50,6 +51,7 @@
     "matcher": "^3.0.0",
     "mimic-response": "^1.0.1",
     "ms": "^2.1.3",
+    "node-7z": "^3.0.0",
     "normalize-url": "^6.1.0",
     "object-keys": "^1.1.1",
     "once": "^1.4.0",
