--- a/launcher/package.json
+++ b/launcher/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "electron-updater": "^6.1.7",
+    "node-7z": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.6.3",
